<resources>
    <string name="app_name">Here</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="here_photo_base_url">http://static.photoshows.cn</string>
    <string name="here_app_id">ponmap-android-client</string>
    <string name="here_app_secret">92jasdjf8923oda</string>
    <string name="access_token">sk.eyJ1IjoiYW55cG9zc2libGUiLCJhIjoiY2lnYzg1enpuMnQ1aHVxa21oY2RqMDRzYiJ9.MX2dNooZRcjUcIkgDXVUKA</string>

    <string name="map_style">Map style</string>

    <string name="button_ok">ok</string>

    <!-- Short text asking them to select an account -->
    <string name="welcome_select_account">Select an account</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_signup">注册</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">没有帐号？注册一个</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_camera">照片</string>

    <!-- UI hit -->
    <string name="search_hint_album">搜索专辑</string>
    <string name="confirm_yes">Yes</string>
    <string name="hint_title">title</string>
    <string name="hint_desc">description</string>
    <string name="hint_comment">comment</string>
    <string name="info_uploading">Uploading</string>
    <string name="info_album_empty">Album empty</string>
    <string name="info_photo_collected">Photo has added</string>
    <string name="placeholder_map_title">Design, Develop Distribute</string>
    <string name="placeholder_map_subtitle">Design, Develop Distribute</string>


    <!-- UI label -->
    <string name="label_photo">photo</string>
    <string name="label_album">album</string>
    <string name="label_member">member</string>
    <string name="label_group">group</string>

    <!-- UI format -->
    <string name="list_title_time_format">yyyy MM/dd HH:mm</string>

    <!-- Track -->
    <string name="track_recording">Recording</string>
    <string name="track_recording_info">Is recording</string>
    <string name="track_km">km</string>
    <string name="track_kmh">km/h</string>
    <string name="track_average_speed">AVG.</string>
    <string name="track_max_speed">MAX</string>
    <string name="track_formatter">%02.1f</string>
    <string name="track_time_format">MM/dd HH:mm</string>
    <string name="track_distance">Distance</string>
    <string name="track_records">Records</string>
    <string name="track_start_time">Start time</string>
    <string name="track_end_time">End time</string>
    <string name="track_not_available">--</string>
    <string name="track_no_description">Empty Description</string>
    <string name="track_remove">Remove track</string>

    <string name="pref_track_accuracy">Track accuracy</string>
    <string name="pref_track_accuracy_description">Track accuracy desc</string>
    <string name="pref_track_accuracy_default">500</string>
    <string-array name="pref_track_accuracys">
        <item >Low</item>
        <item >Mid</item>
        <item >Hig</item>
    </string-array>
    <string-array name="pref_track_accuracy_values">
        <item >100</item>
        <item >500</item>
        <item >1000</item>
    </string-array>

    <string name="pref_gps_mintime">GPS mintime</string>
    <string name="pref_gps_mintime_description">GPS mintime desc</string>
    <string name="pref_gps_mindistance">GPS mindistance</string>
    <string name="pref_gps_mindistance_description">GPS mindistance desc</string>

</resources>
