<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Here Android Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_local_times"
        android:title="@string/pref_track_accuracy"
        android:summary="@string/pref_track_accuracy_description"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="pref_track_accuracy"
        android:title="@string/pref_track_accuracy"
        android:summary="@string/pref_track_accuracy_description" />

    <ListPreference
        android:key="pref_track_accuracy2"
        android:title="@string/pref_track_accuracy"
        android:summary="List to choose from"
        android:entries="@array/pref_track_accuracys"
        android:entryValues="@array/pref_track_accuracy_values"
        android:defaultValue="500"
        android:dialogTitle="@string/pref_track_accuracy"
        />

    <EditTextPreference
        android:key="pref_gps_mintime"
        android:title="@string/pref_gps_mintime"
        android:summary="@string/pref_gps_mintime_description" />

    <EditTextPreference
        android:key="pref_gps_mindistance"
        android:title="@string/pref_gps_mindistance"
        android:summary="@string/pref_gps_mindistance_description" />
</PreferenceScreen>