<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 The Here Android Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layout_meta">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_start_time"/>
            <TextView android:id="@+id/tv_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="09/18 07:56"/>
        </LinearLayout>

        <ImageView android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.4"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_end_time"/>
            <TextView android:id="@+id/tv_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="09/18 07:56"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_distance"
                style="@style/Track.Item.Title"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView android:id="@+id/tv_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Track.Digit"
                    android:text="0"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Track.Unit"
                    android:text="@string/track_km"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="@dimen/divider_height"
            android:layout_height="match_parent"
            android:background="@color/divider"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_average_speed"
                style="@style/Track.Item.Title"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:id="@+id/tv_average_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Track.Digit"
                    android:text="0"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Track.Unit"
                    android:text="@string/track_kmh"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_max_speed"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:id="@+id/tv_max_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Track.Digit"
                    android:text="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Track.Unit"
                    android:text="@string/track_kmh"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="@dimen/divider_height"
            android:layout_height="match_parent"
            android:background="@color/divider"
            android:layout_margin="10dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_records"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:id="@+id/tv_records"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Track.Digit"
                    android:text="0"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>